hphp/test/vm/priv6.php.expectf
C1::bar
C2::bar
C3::bar
HipHop Fatal error: Call to private method A4::bar from context B4 in %s on line 45
